# Todo_Spec-Driven_Development_Phase1_Advance

./: .gitignore  CLAUDE.md  README.md  output.txt
.gemini-temp/: feature_description.txt
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/src/: database.py  main.py
backend/src/api/: auth.py  todos.py
backend/src/auth/: jwt.py
backend/src/models/: todo.py  user.py
backend/src/services/: todo_service.py  user_service.py
frontend/src/app/: layout.tsx
frontend/src/services/: auth_api.ts  todo_api.ts
history/prompts/001-full-stack-todo-app/: 0001-create-full-stack-todo-app-specification.spec.prompt.md  0002-create-implementation-plan-for-todo-web-app.plan.prompt.md  0003-generate-actionable-tasks-for-todo-web-app.tasks.prompt.md  0004-implement-core-full-stack-todo-app-features.green.prompt.md
history/prompts/constitution/: 0001-establish-initial-project-constitution.constitution.prompt.md  0002-update-project-constitution-with-new-principles-and-scope.constitution.prompt.md
specs/001-core-todo-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-todo-features/checklists/: requirements.md
specs/001-full-stack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-python-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.py  cli.py  tasks.py  utils.py
tests/integration/: test_app_flow.py
tests/unit/: test_cli.py  test_tasks.py
(+17 files in other folders)
