[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Todo App"
dependencies = [
    "fastapi",
    "sqlmodel",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "psycopg2-binary", # for PostgreSQL
    "passlib[bcrypt]", # for password hashing
]
requires-python = ">=3.11"
license = { text = "MIT" }
